cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
set(PROJECT_NAMESPACE "ADMIN")
project("Admin-P1"
	VERSION 1.0.0
	DESCRIPTION "P1-ADMIN"
	LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_BUILD_TYPE Debug)

set(PROJECT_SHORTNAME "WriteLine")
set(PROJECT_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")

add_subdirectory("src")